# Jobrocket

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  _apply_8hpp.html  _atomic_counter_8hpp.html  _error_8cpp.html  _error_8hpp.html  _fixed_pool_allocator_8hpp.html  _fixed_work_stealing_queue_8hpp.html  _index_sequence_8hpp.html  _invoke_8hpp.html  _job_8hpp.html  _job_group_8hpp.html  _job_pool_8hpp.html  _jobrocket_8cpp.html  _jobrocket_8hpp.html  _r_e_a_d_m_e_8md.html  _r_n_g_8hpp.html  _scheduler_8cpp.html  _scheduler_8hpp.html  _worker_8cpp.html  _worker_8hpp.html  annotated.html  build.py  classes.html  classjobrocket_1_1_job_group-members.html  classjobrocket_1_1_job_group.html  classjobrocket_1_1_job_pool-members.html  classjobrocket_1_1_job_pool.html  classjobrocket_1_1_scheduler-members.html  classjobrocket_1_1_scheduler.html  classjobrocket_1_1_worker-members.html  classjobrocket_1_1_worker.html  classjobrocket_1_1detail_1_1_atomic_counter-members.html  classjobrocket_1_1detail_1_1_atomic_counter.html  classjobrocket_1_1detail_1_1_fixed_pool_allocator-members.html  classjobrocket_1_1detail_1_1_fixed_pool_allocator.html  classjobrocket_1_1detail_1_1_fixed_work_stealing_queue-members.html  (+42 more)
CMake/: jobrocket.cmake  tasks.cmake
CMake/cmake_utils/: add_sources.cmake  cmake_utils.cmake  include.cmake
Docs/: Doxyfile  DoxygenLayout.xml  customdoxygen.css  header.html  publish.py  publish.sh
Examples/: BasicExample.cpp  CMakeLists.txt  JobSchedulerExample.cpp  MinimalExample.cpp  QueueTests.cpp  TaskSchedulerExample.cpp  main.cpp
Examples/GameExample/: CMakeLists.txt  GameTest.hpp
Source/: CMakeLists.txt
Source/JobRocket/: AtomicCounter.hpp  CMakeLists.txt  FixedPoolAllocator.hpp  FixedWorkStealingQueue.hpp  Job.hpp  JobGroup.hpp  JobPool.hpp  JobRocket.cpp  JobRocket.hpp  NumericTypes.hpp  RNG.hpp  Scheduler.cpp  Scheduler.hpp  StaticPoolAllocator.hpp  StaticWorkStealingQueue.hpp  Worker.cpp  Worker.hpp
Source/JobRocket/Detail/: Apply.hpp  AtomicCounter.hpp  Error.cpp  Error.hpp  FixedPoolAllocator.hpp  FixedWorkStealingQueue.hpp  IndexSequence.hpp  Invoke.hpp  RNG.hpp
Source/JobRocket/Meta/: Apply.hpp  IndexSequence.hpp  Invoke.hpp
Source/Jobrocket/: CMakeLists.txt  Job.hpp  JobGroup.hpp  Scheduler.cpp  Scheduler.hpp  Worker.cpp  Worker.hpp
Source/Jobrocket/Detail/: Apply.hpp  AtomicCounter.hpp  CMakeLists.txt  Error.cpp  FixedPoolAllocator.hpp  FixedWorkStealingQueue.hpp  IndexSequence.hpp  RNG.hpp
Tests/: CMakeLists.txt  TestJobPool.cpp  TestPoolAllocator.cpp  TestQueue.cpp  TestWorker.cpp  TestsMain.cpp
